--- a/index.qmd
+++ b/index.qmd
@@ -6,13 +6,13 @@ about:
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
+      href: https://twitter.com/ParagasSpencer
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/spencer-paragas-08ab0616a
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/skparagas
 ---
 
 About this blog
