Editing the about page and the blogs

--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -2,7 +2,7 @@
 title: "Probability Theory and Random Variables"
 author: "Spencer Paragas"
 date: "2023-11-28"
-categories: [code, analysis]
+categories: [cs5805final, code, analysis]
 image: "image.jpg"
 ---
 
