--- a/index.qmd
+++ b/index.qmd
@@ -4,15 +4,15 @@ image: profile.jpg
 about:
   template: jolla
   links:
+    - icon: github
+      text: Github
+      href: https://github.com/skparagas
     - icon: twitter
       text: Twitter
       href: https://twitter.com/ParagasSpencer
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/spencer-paragas-08ab0616a
-    - icon: github
-      text: Github
-      href: https://github.com/skparagas
 ---
 
-About this blog
+My name is Spencer Paragas. I am an associate analyst at Altria Client Services, as well as a graduate student in the Computer Science Masters of Engineering program at Virginia Tech. This blog is currently set up as the final project in my graduate class on machine learning. My hope, however, is that this blog will eventually turn into something beyond just this class.
