--- a/blog/post-with-code/prob.qmd
+++ b/blog/post-with-code/prob.qmd
@@ -1,9 +1,17 @@
 ---
 title: "Probability Theory and Random Variables"
 author: "Spencer Paragas"
-date: "2023-11-28"
+date: last-modified
 categories: [cs5805final, code, analysis]
 image: "image.jpg"
+format: 
+  html: 
+    mermaid: 
+      theme: default
+    output-file: index.html
+filters: 
+  - ../date.lua
+  - include-code-files
 ---
 
 This is a post with executable code.
