--- a/blog.qmd
+++ b/blog.qmd
@@ -1,7 +1,7 @@
 ---
 title: "CS 5805 Final Project"
 listing:
-  contents: posts
+  contents: blog
   sort: "date desc"
   type: default
   categories: true
