Changing URL for probability source code

--- a/blog/probability/prob.qmd
+++ b/blog/probability/prob.qmd
@@ -10,7 +10,7 @@ format:
       theme: default
     output-file: index.html
     code-tools: 
-      source: "https://github.com/skparagas/CS-5805-Final-Project/blob/master/blog/probability%20theory/prob.qmd"
+      source: "https://github.com/skparagas/CS-5805-Final-Project/blob/master/blog/probability/prob.qmd"
 ---
 
 This is a post with executable code.
