Adding the final two blogs

--- a/blog/blog.qmd
+++ b/blog/blog.qmd
@@ -4,6 +4,8 @@ listing:
     - probability/*.qmd
     - clustering/*.qmd
     - regression/*.qmd
+    - classification/*.qmd
+    - outliers/*.qmd
   sort: false
   type: grid
   categories: true
